--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,5 +75,8 @@ dependencies {
     implementation "com.google.dagger:hilt-android:2.41"
     kapt "com.google.dagger:hilt-android-compiler:2.41"
 
+    // compose navigation
+    implementation "androidx.navigation:navigation-compose:2.5.3"
+
 
 }
