--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,5 +78,7 @@ dependencies {
     // compose navigation
     implementation "androidx.navigation:navigation-compose:2.5.3"
 
+    // icons
+    implementation "androidx.compose.material:material-icons-extended:$compose_ui_version"
 
 }
