export DB schema for migrations

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,13 @@ android {
         vectorDrawables {
             useSupportLibrary true
         }
+
+        // export schema, necesario para las migraciones automaticas
+        kapt {
+            arguments {
+                arg("room.schemaLocation", "$projectDir/schemas")
+            }
+        }
     }
 
     buildTypes {
