added ads banner

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,11 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+
+        <!--        change with real value-->
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-3940256099942544~6300978111" />
     </application>
 
 </manifest>
