--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,12 +7,12 @@ plugins {
 
 android {
     namespace 'com.pepivsky.todocompose'
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.pepivsky.todocompose"
         minSdk 24
-        targetSdk 32
+        targetSdk 33
         versionCode 10
         versionName "1.9"
 
@@ -90,5 +90,8 @@ dependencies {
 
     // splashScreen
     implementation "androidx.core:core-splashscreen:1.0.0"
+
+    // ads
+    implementation 'com.google.android.gms:play-services-ads:21.3.0'
 
 }
